[gd_scene load_steps=3 format=3 uid="uid://bxn8amhs6oilh"]

[ext_resource type="Script" path="res://upgrades/menu/upgrade_menu.gd" id="1_7f686"]
[ext_resource type="Theme" uid="uid://b7ridqq1ro7a8" path="res://metal_theme.tres" id="2_qtlfa"]

[node name="UpgradeMenu" type="CanvasLayer"]
script = ExtResource("1_7f686")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qtlfa")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Menu Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradesGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 4

[node name="Footer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Footer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "DONE"
